after build, added icon

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&family=Lora&family=Montserrat:wght@100;200;300;400&family=Oswald:wght@200;400&family=Source+Sans+Pro:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+    <head>
+      <link rel="icon" href="/client/public/favicon.png" />
+    </head>
     <style>
       * {
         margin: 0;
@@ -25,7 +28,7 @@
         box-sizing: border-box;
       }
     </style>
-    <title>Blog App</title>
+    <title>Free World</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
