--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&family=Lora&family=Montserrat:wght@100;200;300;400&family=Oswald:wght@200;400&family=Source+Sans+Pro:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
-    <head>
-      <link rel="icon" href="/client/public/favicon.png" />
-    </head>
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.jpg" />
+
     <style>
       * {
         margin: 0;
