navbar, header mobile/responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         box-sizing: border-box;
       }
     </style>
-    <title>Free World</title>
+    <title>Free Minds - Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
